# apple-mail-mcp

./: CHANGELOG.md  CLAUDE.md  README.md  create-mail-rules.applescript  extract-attachments.py  mkdocs.yml  move-all-batches.sh  move-batch.applescript  move-to-unsubscribe.applescript  pyproject.toml  server.json  unsubscribe-ulb.md
benchmarks/: charts.py  competitors.py  run.py  setup.sh
docs/: benchmarks.md  getting-started.md  index.md  search.md  tools.md
src/apple_mail_mcp/: __init__.py  cli.py  server.py
src/apple_mail_mcp/index/: disk.py  manager.py  search.py  watcher.py
tests/: test_disk.py  test_search.py  test_server.py  test_watcher.py
